Match casing on login action

--- a/src/Belletrix.Web/Web.Release.config
+++ b/src/Belletrix.Web/Web.Release.config
@@ -30,7 +30,7 @@
     <compilation xdt:Transform="RemoveAttributes(debug)" />
 
     <authentication mode="Forms">
-      <forms loginUrl="~/Login/Index" requireSSL="true" xdt:Transform="Replace" />
+      <forms loginUrl="~/login/index" requireSSL="true" xdt:Transform="Replace" />
     </authentication>
 
     <httpCookies httpOnlyCookies="true" requireSSL="true" lockItem="true" xdt:Transform="Replace" />
