--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -34,7 +34,7 @@
   -->
   <system.web>
     <authentication mode="Forms">
-      <forms loginUrl="~/Login/index" />
+      <forms loginUrl="~/login/index" />
     </authentication>
     <httpCookies httpOnlyCookies="true" />
     <trust level="Full" />
