Fix not catching 404 errors in production

--- a/src/Belletrix.Web/Web.Release.config
+++ b/src/Belletrix.Web/Web.Release.config
@@ -54,5 +54,7 @@
         <add name="Strict-Transport-Security" value="max-age=16070400" xdt:Transform="Insert" />
       </customHeaders>
     </httpProtocol>
+
+    <httpErrors xdt:Transform="SetAttributes(existingResponse)" existingResponse="Replace" />
   </system.webServer>
 </configuration>
