--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -107,6 +107,11 @@
         <add name="X-UA-Compatible" value="IE=edge,chrome=1" />
       </customHeaders>
     </httpProtocol>
+    <!-- Show original MVC status pages in local dev. -->
+    <httpErrors errorMode="Custom" existingResponse="PassThrough">
+      <remove statusCode="404" />
+      <error statusCode="404" responseMode="ExecuteURL" path="/error/notfound" />
+    </httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
