Consolidate experiences lists into one partial

--- a/src/Belletrix.Web/Belletrix.Web.csproj
+++ b/src/Belletrix.Web/Belletrix.Web.csproj
@@ -292,6 +292,7 @@
     <Content Include="Views\Promo\NameCheck.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Promo\Edit.cshtml" />
+    <Content Include="Views\Student\StudyAbroadList.Partial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
