--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -58,6 +58,7 @@
     <!-- Catch all unhandled exceptions. -->
     <modules runAllManagedModulesForAllRequests="true">
       <add name="ErrorLog" type="StackExchange.Exceptional.ExceptionalModule, StackExchange.Exceptional" />
+      <remove name="WebDAVModule" />
     </modules>
     <staticContent>
       <remove fileExtension=".woff" />
@@ -73,6 +74,7 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="MiniProfiler" path="mini-profiler-resources/*" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode" />
+      <remove name="WebDAV" />
     </handlers>
     <security>
       <requestFiltering>
