Don't entertain requests by IP, redirect them to domain
Fixes "The requested resource can only be accessed via SSL" exception.

--- a/src/Belletrix.Web/Web.Release.config
+++ b/src/Belletrix.Web/Web.Release.config
@@ -56,5 +56,17 @@
     </httpProtocol>
 
     <httpErrors xdt:Transform="SetAttributes(existingResponse)" existingResponse="Replace" />
+
+    <rewrite xdt:Transform="Insert">
+      <rules>
+        <rule name="Redirect requests for IP to domain name" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTP_HOST}" pattern="162.250.73.156" />
+          </conditions>
+          <action type="Redirect" url="https://belletrix.org" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
 </configuration>
