Feature to edit study abroad experiences

--- a/src/Belletrix.Web/Belletrix.Web.csproj
+++ b/src/Belletrix.Web/Belletrix.Web.csproj
@@ -297,6 +297,8 @@
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Promo\Edit.cshtml" />
     <Content Include="Views\Student\StudyAbroadList.Partial.cshtml" />
+    <Content Include="Views\StudyAbroad\Edit.cshtml" />
+    <Content Include="Views\StudyAbroad\EditFields.Partial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
