Replace SendGrid for mail delivery

--- a/src/Belletrix.Web/Web.Release.config
+++ b/src/Belletrix.Web/Web.Release.config
@@ -22,7 +22,7 @@
   </connectionStrings>
 
   <Exceptional applicationName="Belletrix">
-    <Email fromAddress="contact@andreinicholson.com" fromDisplayName="Belletrix" toAddress="contact@andreinicholson.com"
+    <Email fromAddress="nobody@belletrix.org" fromDisplayName="Belletrix" toAddress="contact@andreinicholson.com"
            xdt:Transform="Insert" />
   </Exceptional>
 
