--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -19,8 +19,8 @@
   </Exceptional>
   <system.net>
     <mailSettings>
-      <smtp deliveryMethod="Network" from="contact@andreinicholson.com">
-        <network host="smtp.sendgrid.net" port="587" userName="tetsuo13" password="5dXAbfcwlerjYdPAW2oA" enableSsl="true" />
+      <smtp deliveryMethod="Network" from="nobody@belletrix.org">
+        <network host="smtp.andreinicholson.com" port="587" userName="nobody@belletrix.org" password="9eYXCdph%AStsh kk^jU!nT*EbER." enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
