Fix duplicate activity log titles being entered into the system

--- a/src/Belletrix.Web/Belletrix.Web.csproj
+++ b/src/Belletrix.Web/Belletrix.Web.csproj
@@ -300,6 +300,7 @@
     <Content Include="Views\Student\StudyAbroadList.Partial.cshtml" />
     <Content Include="Views\StudyAbroad\Edit.cshtml" />
     <Content Include="Views\StudyAbroad\EditFields.Partial.cshtml" />
+    <Content Include="Views\ActivityLog\TitleCheck.Partial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
