--- a/src/Belletrix.Web/packages.config
+++ b/src/Belletrix.Web/packages.config
@@ -11,6 +11,7 @@
   <package id="Dapper" version="1.50.2" targetFramework="net451" />
   <package id="DropDownList.Optgroup.MVC" version="1.0.0" targetFramework="net45" />
   <package id="jQuery" version="2.2.4" targetFramework="net45" />
+  <package id="jquery.fileupload.TypeScript.DefinitelyTyped" version="0.0.8" targetFramework="net451" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.0" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.15.1" targetFramework="net45" />
   <package id="jquery.validation.TypeScript.DefinitelyTyped" version="0.4.5" targetFramework="net45" />
