Redirect all requests to HTTPS if not already

--- a/src/Belletrix.Web/Web.Release.config
+++ b/src/Belletrix.Web/Web.Release.config
@@ -66,6 +66,13 @@
           </conditions>
           <action type="Redirect" url="https://belletrix.org" redirectType="Permanent" />
         </rule>
+        <rule name="Redirect to HTTPS" stopProcessing="true">
+          <match url=".*" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" appendQueryString="false" />
+        </rule>
       </rules>
     </rewrite>
   </system.webServer>
